<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>
    <string name="expired_todo_title">Niezrealizowane zadanie</string>
    <string name="todo_name">Nazwa zadania</string>
    <string name="realization_date">Data zakończenia</string>
    <string name="priority">Priorytet</string>
    <string name="save">Zapisz</string>
    <string name="status">Status</string>
    <string name="back">Powrót</string>
    <string name="largePhoto">Duże zdjęcie</string>
    <string name="sortMethod">Wybierz metodę sortowania:</string>
    <string name="addDate">Data dodania</string>
    <string name="deadline">Termin zakończenia</string>
    <string name="name">Nazwa</string>
    <string name="sort">Sortuj</string>
    <string name="edit">Edytuj</string>
    <string name="attach">Dodaj załącznik</string>
    <string name="delete">Usuń Todo</string>
    <string name="missingTitle">Uzupełnij tytuł zadania</string>
    <string name="titleTooLong">Tytuł zadania jest zbyt długi</string>
    <string name="deadlineMissing">Uzupełnij datę realizacji</string>
    <string name="deadlineInThePast">Nie można planować zadań na przeszłość</string>
    <string name="doDelete">Czy usunąć załącznik?</string>
    <string name="yes">Tak</string>
    <string name="fileDeleted">Plik usunięty</string>
    <string name="errorOccurs">Wystąpił błąd</string>
    <string name="no">Nie</string>
    <string name="permissionGranted">Udzielono uprawnień do kamery</string>
    <string name="permissionDenied">Odmówiono uprawnień do kamery</string>
    <string name="userAttachAction">Co chcesz dodać?</string>
    <string name="photo">Zdjęcie</string>
    <string name="cancel">Anuluj</string>
    <string name="movie">Film</string>
    <string name="task">Zadanie</string>
    <string name="isOverDeadline">jest przeterminowane!</string>
    <string name="mustBeDoneToday">musi być dziś zrealizowane!</string>
    <string name="savedTo">Zapisano do:</string>
</resources>
