<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    android:background="#232323"
    android:maxHeight="450dp"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortMethod"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/createDateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/addDate" />

        <RadioButton
            android:id="@+id/realizationDateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/deadline" />

        <RadioButton
            android:id="@+id/priorityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/priority" />

        <RadioButton
            android:id="@+id/nameRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/name" />
        <RadioButton
            android:id="@+id/statusRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:text="@string/status" />
    </RadioGroup>

    <Button
        android:id="@+id/sort_dialog_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/sort"
        android:textAllCaps="false"/>

</LinearLayout>